2014-12-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xbb.c: Support to specify a page in a multi-page PDF to extract
	bounding box, usage: extractbb -p page foo.pdf.

2014-12-01  Karl Berry  <karl@tug.org>

	* data/dvipdfmx.cfg (D): add back -sPAPERSIZE=a0, needed for
	pstricks under xetex; retain -dEPSCROP, needed for negative llx/lly.
	From Akira, thread at
        http://tug.org/pipermail/xetex/2014-November/025664.html.

2014-11-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfmx.test, xdvipdfmx.test: Also test --showpaper option.	

2014-11-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c, dpxconf.c, dpxconf.h: Add an option --showpaper which
	shows available paper formats and exits.

2014-11-29  Karl Berry  <karl@tug.org>

	* dvipdfmx.c (show_usage): use [all pages] instead of (-).
	From peb.

2014-11-28  Karl Berry  <karl@tug.org>

	* dvipdfmx.c (main): accept --extractbb per help message.
	(show_usage): one line of description.
	* xbb.c (show_usage): likewise.
	Suggestion from Tom Schneider, texhax 22 Nov 2014 08:53:19.

2014-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfmx.c: Modified support to make DLL(s) in W32TeX.

2014-11-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Support to make DLL in W32TeX.

2014-11-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dpxfile.c: Check if fqpn == NULL in dpx_open_file(), because
	MESG (fqpn) crashes if fqpn == NULL.

2014-11-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pkfont.c: Fix the messed up formatting codes.
	* pdfparse.c: Avoid undefined behaviour when char is signed.

2014-11-03  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdev.c: Do not convert integer part of real numbers to long int
	when printing a real number.
	* pdfparse.c: Do not use temporary integer values for storing
	parsed numbers.
	* pkfont.c: Remove debugging codes, additional fixes in formatting
	integer values.

2014-10-29  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
