@@ -163,7 +163,7 @@ spc_handler_xtx_grestore (struct spc_env *spe, struct spc_arg *args)
    * we make no assumptions about what fonts. We act like we are
    * starting a new page.
    */
-  pdf_dev_reset_fonts();
+  pdf_dev_reset_fonts(0);
   pdf_dev_reset_color(0);
 
   return  0;
